--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button type="button" class="box"></button>
             </div>
         </div>
-        <button class="reset-game" onclick="resetGame()">Reset Game</button>
+        <button type="button" class="reset-game" onclick="resetGame()">Reset Game</button>
     </main>
     <script src="script.js"></script>
 </body>
